Fix layout shift in Carousels

--- a/src/assets/styles/components/common/carousels/genericSwiperCarousel.scss
+++ b/src/assets/styles/components/common/carousels/genericSwiperCarousel.scss
@@ -1,15 +1,18 @@
 .generic-carousel {
+  .studios-carousel {
+    min-height: 350px;
+  }
+
   color: #fff;
   max-width: calc(100vw - 2rem);
   min-width: 100%;
   min-height: max-content;
   border-radius: 8px;
   position: relative;
-  // height: fit-content;
 
   .swiper_wrap {
     position: relative;
-    min-height: 300px;
+    min-height: 256px;
   }
 
   .swiper {
